<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2ps_controller_server</name>
  <version>0.0.1</version>
  <description>ROS2 Process Controller Package</description>
  <maintainer email="naru5135@wavem.net">reidlo</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclnodejs</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
